--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-rate-limit": "^7.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
+    "nodemailer": "^6.9.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
