--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^7.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "memory-cache": "^0.2.0",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
     "uuid": "^9.0.1"
