--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-openapi-validator": "^5.0.6",
     "express-rate-limit": "^7.1.1",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
-    "uuid": "^9.0.1"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
